assets/css/styles.scss
---
---
// VARIABLES
$breakpoint-sm: 480px;
$breakpoint-md: 768px;
$breakpoint-lg: 1024px;
$breakpoint-xl: 1200px;


$color-black: #3F3F46;
$color-gray-25: #FCFCFD;
$color-gray-100: #F4F4F4;
$color-gray-150: #EAECF0;
$color-gray-200: #D0D5DD;
$color-gray-400: #98A2B3;
$color-gray-500: #667085;
$color-gray-800: #3F3F3F;
$color-gray-900: #101828;
$color-blue-100: #1C79B8;
$color-blue-200: #2F80ED;
$color-green-100: #8EC043;

// FONTS:
@font-face {
    font-family: "GillSans";
    src: url("../fonts/gill/Gill Sans Light.otf");
    font-weight: 300;
}
@font-face {
    font-family: "GillSans";
    src: url("../fonts/gill/Gill Sans.otf");
    font-weight: 400;
}
@font-face {
    font-family: "GillSans";
    src: url("../fonts/gill/Gill Sans Medium.otf");
    font-weight: 500;
}
@font-face {
    font-family: "GillSans";
    src: url("../fonts/gill/Gill Sans Bold.otf");
    font-weight: 600;
}

body { font-family: "GillSans"; }



// CLASES
* { 
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    margin: 0;
    padding: 0;
}

.container {
    width: 100%;
    max-width: 1288px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 16px;
    padding-right: 16px;

    &.quotes {
        max-width: 824px;
    }
    &.quotes-inner {
        max-width: 567px;
    }

    &.grid {
        display: grid;
        grid-template-columns: repeat(1, minmax(0, 1fr));
        gap: 20px;
    }

    @media (min-width: $breakpoint-md) {
        &.grid {
            grid-template-columns: repeat(12, minmax(0, 1fr));
        
        }
    }
}

.w-full-container {
    width: 100%;
    background-color: $color-gray-800;

    &.video {
        height: 580px;
        position: relative;
        overflow: hidden;
        
        video {
            width: 100%;
            height: 100%;
            object-fit: cover;
            position: absolute;
        }
        video + .container {
            position: relative;
            display: flex;
            align-items: end;
            height: 580px;
            z-index: 1;
    
            h1 {
                font-weight: 200;
                font-size: 40px;
                line-height: 1.2em;
                color: $color-gray-25;
                margin-bottom: 64px;
            }
        }
    }
    @media (min-width: $breakpoint-md) {
        &.video {
            height: 640px;

            video + .container {
                height: 640px;
                
                h1{
                    font-size: 48px;
                }
            }
        }
    }
}

.block {
    padding-top: 32px;
    padding-bottom: 32px;

    &.extended {
        padding-top: 72px;
        padding-bottom: 72px;
    }
}

header {
    background-color: white;

    & > .container {
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
        display: flex;
        align-items: center;
        justify-content: space-between;
        
        img {
            width: 52px;
            height: 52px;
        }
        .navbar--button {
            display: block;
        }
        .navbar--container {
            display: none;
            align-items: center;
            gap: 24px;

            a {
                font-style: 400;
                font-size: 16px;
                line-height: 1.5em;
                text-decoration: none;
                color: $color-black;
            }
        }
    }
    @media (min-width: $breakpoint-lg) {
        padding-top: 1rem;
        padding-bottom: 1rem;
        & > .container {
            img {
                width: 72px;
                height: 72px;
            }
            .navbar--button {
                display: none;
            }
            .navbar--container {
                display: flex;
            }
        }
    }
}

.quote--list {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.quotes {
    color: $color-gray-900;
    
    h4 {
        font-weight: 600;
        font-size: 16px;
        line-height: 24px;
        color: $color-green-100;
        margin-bottom: 12px;
    }

    h3 {
        font-weight: 500;
        font-size: 36px;
        line-height: 44px;
        letter-spacing: -0.02em;
    }
    p { color: $color-gray-500; }
}

.blue-card--container {
    position: relative;
    color: $color-gray-25;
    background-color: $color-blue-100;
    padding-top: 72px;
    padding-bottom: 72px;
    margin-top: -64px;
    z-index: 1;

    h3 {
        font-weight: 500;
        font-size: 32px;
        line-height: 130%;
        margin-bottom: 0;
    }
    p {
        color: $color-gray-25;
        font-weight: 400;
        font-size: 16px;
        line-height: 150%;
        
    }
}

.w-full-grid {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));

    .grid-item {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 200px;
        background-color: $color-gray-100;
        color: $color-gray-900;
        position: relative;
        overflow: hidden;

        h3 {
            font-weight: 500;
            font-size: 30px;
            line-height: 1.5em;
            letter-spacing: -0.02em;
        }

        &.extended:first-child {
            grid-column: span 2 / span 2;
        }

        img + h3 {
            color: white;
            position: relative;
            z-index: 1;
            text-shadow: 3px 4px 12px rgba(0, 0, 0, 0.12);
        }

        img {
            object-fit: cover;
            object-position: center;
            width: 100%;
            height: 100%;
            position: absolute;
        }
    }

    @media (min-width: $breakpoint-lg) {
        grid-template-columns: repeat(5, minmax(0, 1fr));

        &.alter-grid {
            grid-template-columns: repeat(4, minmax(0, 1fr));
        }

        .grid-item {
            height: 264px;

            &.extended:first-child {
                height: 528px;
                grid-row: span 2 / span 2;
                grid-column: span 2 / span 2;
            }

            h3 {
                font-size: 36px;
            }
        }
    }
}

footer {
    .container {
        padding-top: 64px;
        padding-bottom: 48px;
    }
    .contact {
        img {
            margin-bottom: 32px;
        }
        p {
            color: $color-gray-500;
            font-weight: 400;
            font-size: 16px;
            line-height: 24px;
        }
    }
    .newsletter {
        p {
            font-weight: 400;
            font-size: 14px;
            line-height: 20px;
            color: $color-gray-900;
            margin-bottom: 1rem;
        }

        form {
            display: flex;
            gap: 1rem;
            align-items: center;
            flex-wrap: wrap;

            input {
                padding: 10px 14px;
                font-weight: 400;
                font-size: 14px;
                line-height: 24px;
                color: $color-gray-500;
                border: 1px solid $color-gray-200;
                box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
                border-radius: 8px;
            }
            button {
                height: 100%;
                background-color: $color-blue-200;
                border: 1px solid $color-blue-200;
                box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
                padding: 10px 18px;
                border-radius: 8px;
                font-weight: 600;
                font-size: 14px;
                line-height: 24px;
                color: white;
            }
        }
    }
    
    .divider {
        margin-top: 64px;
        margin-bottom: 32px;
    }

    .copyright {
        flex-direction: column-reverse;
        display: flex;
        gap: 1rem;

        p {
            color: $color-gray-400;
            font-weight: 400;
            font-size: 16px;
            line-height: 24px;
        }
        
        .social-medias {
            display: flex;
            gap: 1.5rem;
            flex-wrap: wrap;
            align-items: center;
        }
        
    }
    .content-inner {
        flex-direction: column;
        display: flex;
        gap: 2rem;
    }

    @media (min-width: $breakpoint-lg) {
        .content-inner,
        .copyright {
            flex-direction: row;
            justify-content: space-between;
        }
        .copyright {
            align-items: center;
        }
    } 
}

.divider {
    width: 100%;
    height: 1px;
    background-color: $color-gray-150;
}

.container.grid {
    .grid--image-block {
        position: relative;
        height: 275px;
        margin-bottom: 1rem;

        .image-block--inner {
            position: absolute;
            width: 100%;
            height: 100%;

            img {
                object-fit: cover;
                width: 100%;
                height: 100%;
            }
        }
    }

    .grid--text-block {
        display: flex;
        flex-direction: column;
        justify-content: center;
        order: 1;

        h3 {
            font-weight: 600;
            font-size: 30px;
            line-height: 38px;
            margin-bottom: 32px;
            color: $color-gray-900;
        }
        ul {
            display: flex;
            flex-direction: column;
            list-style: none;
            gap: 20px;

            li {
                background: url('../images/icons/check-1.svg') no-repeat;
                padding-left: 40px;
                font-weight: 400;
                font-size: 18px;
                line-height: 28px;
                color: $color-gray-500;
            }
        }
        ul.alter li {
            background: url('../images/icons/check-2.svg') no-repeat;
        }
    }


    @media (min-width: $breakpoint-md) {
        .grid--image-block {
            grid-column: span 5 / span 5;
            height: 534px;
            margin-bottom: 0;
        
            .image-block--inner {
                top: 0;
                right: 0;
                width: 60vw;
                height: 100%;
            }
            
        }
        .grid--text-block {
            grid-column: span 6 / span 6;
            order: 0;
        }
    
        .grid--text-block + .grid--image-block {
            grid-column-start: 8;
            height: 682px;

            .image-block--inner {
                right: auto;
                left: 0;
            }
        }
        .grid--image-block + .grid--text-block {
            grid-column-start: 7;
        }
    }
    @media (min-width: $breakpoint-xl) {
        .grid--image-block {
            grid-column: span 6 / span 6;
        }
        .grid--text-block {
            grid-column: span 5 / span 5;
        }
    
        .grid--text-block + .grid--image-block {
            grid-column-start: 7;
            height: 682px;
        }
        .grid--image-block + .grid--text-block {
            grid-column-start: 8;
        }
    }
}

section {
    overflow-x: hidden;
}

